[package]
name = "dioxus-material-symbols"
version = "4.3.0"
edition = "2021"
license = "MIT"
description = "Material Symbols for Dioxus"
repository = "https://github.com/kualta/diom"
homepage = "https://github.com/kualta/diom"
keywords = ["dioxus", "material-design", "icons", "ui", "gui"]
categories = ["web-programming", "gui"]
readme = "README.md"

[[example]]
name = "button"
path = "examples/button.rs"

[dependencies]
dioxus = "0.4.3"

[dev-dependencies]
dioxus-desktop = "0.4.3"
